# scx_timely

./: .gitignore  Cargo.toml  README.md  benchmark.sh  enable_scx_timely.sh  install.sh  install_benchmark_deps.sh  mini_benchmarker.sh  mini_benchmarker_plot.py
artifacts/cachyos-quick-benchmarker-20260322-080013/: mini_benchmarker_summary.csv
artifacts/cachyos-quick-benchmarker-20260322-192352/: mini_benchmarker_summary.csv
artifacts/mini-benchmarker-20260323-061656/: mini_benchmarker_summary.csv
artifacts/mini-benchmarker-20260323-065408/: mini_benchmarker_summary.csv
docs/: design-vs-bpfland.md  v2-pressure-mode-note.md  whats-new-in-v2.md
src/: main.rs  stats.rs
src/bpf/: main.bpf.c
