[package]
name = "scx_timely"
version = "0.3.3"
authors = ["scx_timely contributors"]
edition = "2021"
description = "A TIMELY-inspired sched_ext scheduler bootstrapped from scx_bpfland"
license = "GPL-2.0-only"
repository = "https://github.com/galpt/scx_timely"

[dependencies]
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
crossbeam = "0.8"
libbpf-rs = "=0.26.1"
log = "0.4"
scx_stats = "1.1.0"
scx_stats_derive = "1.1.0"
scx_utils = { version = "1.1.0", features = ["autopower"] }
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"

[build-dependencies]
scx_cargo = "1.1.0"

[features]
enable_backtrace = []
